# scriptshotweb

./: .gitignore  DEVICES.md  DOCS.md  LICENSE  MANIFEST.in  MIGRATION_GUIDE.md  PUBLISH.md  README.md  ROADMAP.md  TROUBLESHOOTING.md  check.sh  install-deps.sh  install.sh  pre_publish_check.py  pyproject.toml  requirements.txt  scriptshotweb  scriptshotweb.sh  setup.py  test_installation.py
wshot/: __init__.py  cli.py
