[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wshot"
version = "1.0.0"
description = "Herramienta profesional para capturas de pantalla web en múltiples dispositivos"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Daniel Martinez Sebastian"}
]
keywords = ["screenshot", "web", "testing", "playwright", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "playwright>=1.40.0",
    "requests>=2.32.0",
]

[project.urls]
Homepage = "https://github.com/DanielMartinezSebastian/scriptshotweb"
"Bug Reports" = "https://github.com/DanielMartinezSebastian/scriptshotweb/issues"
Source = "https://github.com/DanielMartinezSebastian/scriptshotweb"

[project.scripts]
wshot = "wshot.cli:main"
