[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wshot"
version = "1.0.2"
description = "Professional automated web screenshot tool for multiple devices - Visual auditing and responsive testing"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Daniel Martinez Sebastian", email = "daniel@martinezsebastian.com"}
]
maintainers = [
    {name = "Daniel Martinez Sebastian", email = "daniel@martinezsebastian.com"}
]

[tool.setuptools]
packages = ["wshot"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]
keywords = ["screenshot", "web", "testing", "playwright", "automation", "responsive", "audit", "visual-testing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Environment :: Console",
]
dependencies = [
    "playwright>=1.40.0",
    "requests>=2.32.0",
]

[project.urls]
Homepage = "https://github.com/DanielMartinezSebastian/wshot"
"Author Website" = "https://martinezsebastian.com"
Documentation = "https://github.com/DanielMartinezSebastian/wshot/blob/main/DOCS.md"
Repository = "https://github.com/DanielMartinezSebastian/wshot"
"Bug Reports" = "https://github.com/DanielMartinezSebastian/wshot/issues"
"Source Code" = "https://github.com/DanielMartinezSebastian/wshot"
Changelog = "https://github.com/DanielMartinezSebastian/wshot/blob/main/ROADMAP.md"

[project.scripts]
wshot = "wshot.cli:main"
